@@ -104,6 +104,7 @@
 #define GUI_APP_SHOW_LYRICS					GUI_APP_PLUGIN_ID + 86
 #define GUI_APP_LYRICS_LOADED				GUI_APP_PLUGIN_ID + 87
 #define GUI_APP_UPDATE_LANGUAGES_SUBTITLES	GUI_APP_PLUGIN_ID + 88
+#define GUI_APP_LIKE_IT_EXT					GUI_APP_PLUGIN_ID + 89
 
 #define GUI_APP_MENU_NOW_PLAYING			GUI_APP_PLUGIN_ID + 90
 #define GUI_APP_MENU_ADDMUSIC_SEARCH		GUI_APP_PLUGIN_ID + 91
